<resources>
    <string name="app_name">Arithmetic things</string>
    <string name="creator">KOLINKO</string>
    <string name="list">Actions list</string>
    <string name="examples">1) (101 + 0) / 3\n2) 3*10⁻⁶ * 10000000.1\n3) true &amp;&amp; true\n4) false &amp;&amp; true\n5) (false &amp;&amp; false) || (true &amp;&amp; true)\n6) (false || false) &amp;&amp; (true &amp;&amp; true)</string>
    <string name="calculate">CALCULATE</string>
    <string name="clear">Clear</string>
    <string name="numbermanual">Example number:</string>
    <string name="numberscomparing">Numbers comparing</string>
    <string name="numbersmultiplication">Numbers multiplication</string>
    <string name="numberdegrees">Number degrees</string>
    <string name="arithmeticexamples">Arithmetic examples</string>
    <string name="actionswithnumbers">Actions with numbers</string>
    <string name="arrays">Arrays</string>
    <string name="triangleexistence">Triangle existence</string>
    <string name="temperature">Temperature</string>
    <string name="bodymassindex">Body mass index</string>
    <string name="temperaturemanual">°F temperature:</string>
    <string name="height">Height (m):</string>
    <string name="weight">Weight (kg):</string>
    <string name="thefirstside">First side:</string>
    <string name="thesecondside">Second side:</string>
    <string name="thethirdside">Third side:</string>
    <string name="newfield">+</string>
    <string name="multiplication">×</string>
    <string name="arraymanual">Number of max/min array elements:</string>
    <string name="newarrayfield">New array field</string>
</resources>