<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriangleExistence">

    <TextView
        android:id="@+id/textViewcreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:textSize="10sp"
        android:textColor="@color/maroon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewcreator">

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1manual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/thefirstside"
                android:fontFamily="@font/timesnewroman"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1examples" />

            <EditText
                android:id="@+id/editText1thefirstside"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:backgroundTint="@color/maroon"
                android:textCursorDrawable="@drawable/cursor"
                android:fontFamily="@font/timesnewromanitalic"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewcreator"
                tools:ignore="Autofill,LabelFor,SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2manual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/thesecondside"
                android:fontFamily="@font/timesnewroman"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1examples" />

            <EditText
                android:id="@+id/editText2thesecondside"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:backgroundTint="@color/maroon"
                android:textCursorDrawable="@drawable/cursor"
                android:fontFamily="@font/timesnewromanitalic"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewcreator"
                tools:ignore="Autofill,LabelFor,SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3manual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/thethirdside"
                android:fontFamily="@font/timesnewroman"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1examples" />

            <EditText
                android:id="@+id/editText3thethirdside"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:backgroundTint="@color/maroon"
                android:textCursorDrawable="@drawable/cursor"
                android:fontFamily="@font/timesnewromanitalic"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewcreator"
                tools:ignore="Autofill,LabelFor,SmallSp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout1">

        <Button
            android:id="@+id/button1calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/calculate"
            android:fontFamily="@font/timesnewroman"
            android:textSize="24sp"
            android:background="@drawable/result"
            android:onClick="onclickcalculate"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/button2clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/clear"
            android:fontFamily="@font/timesnewroman"
            android:textSize="24sp"
            android:background="@drawable/clear"
            android:textAllCaps="false"
            android:onClick="onclickclear"
            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/timesnewroman"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>